--- a/christmas-1/index.html
+++ b/christmas-1/index.html
@@ -26,6 +26,10 @@
     <div id="loading">
         <div class="spinner"></div>
         <p>正在加载魔法世界...</p>
+        <div id="loading-bar-container" style="width: 200px; height: 6px; background: #333; margin-top: 10px; border-radius: 3px; overflow: hidden;">
+            <div id="loading-bar" style="width: 0%; height: 100%; background: #FFD700; transition: width 0.3s;"></div>
+        </div>
+        <p id="loading-percent" style="font-size: 12px; color: #888; margin-top: 5px;">0%</p>
     </div>
 
     <div id="info" style="display: none;">
